--- a/cameraTest/IDSCamera_test/IDSCamera_test.vcxproj
+++ b/cameraTest/IDSCamera_test/IDSCamera_test.vcxproj
@@ -76,6 +76,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Program Files\IDS\uEye\Develop\include;D:\software\36-opencv401\opencv-4.0.1-vc14_vc15\opencv\build\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\IDS\uEye\Develop\Lib;D:\software\36-opencv401\opencv-4.0.1-vc14_vc15\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -110,6 +112,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>uEye_api_64.lib;opencv_world401d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
