--- a/QtProject/QtProject/QtProject.vcxproj
+++ b/QtProject/QtProject/QtProject.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClCompile Include="DlgMatchShape.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mypaint.cpp" />
     <ClCompile Include="QtProject.cpp" />
     <ClCompile Include="ThreadWork.cpp" />
   </ItemGroup>
@@ -154,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="DlgMatchShape.h" />
+    <QtMoc Include="mypaint.h" />
     <ClInclude Include="ThreadWork.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
