--- a/QtProject/QtProject/QtProject.vcxproj
+++ b/QtProject/QtProject/QtProject.vcxproj
@@ -156,7 +156,7 @@
   <ItemGroup>
     <QtMoc Include="DlgMatchShape.h" />
     <QtMoc Include="mypaint.h" />
-    <ClInclude Include="ThreadWork.h" />
+    <QtMoc Include="ThreadWork.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
